deployment.yaml
# Server deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpoc-server
spec:
  selector:
    matchLabels:
      app: kpoc-server
  template:
    metadata:
      labels:
        app: kpoc-server
    spec:
      containers:
        - name: kpoc-server
          image: kpoc-server:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "50Mi"
              cpu: "120m"
---
apiVersion: v1
kind: Service
metadata:
  name: kpoc-server
  labels:
    app: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: kpoc-server
status:
  loadBalancer: {}
---
# Client deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kpoc-client
spec:
  selector:
    matchLabels:
      app: kpoc-client
  template:
    metadata:
      labels:
        app: kpoc-client
    spec:
      containers:
        - name: kpoc-client
          image: kpoc-client:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: kpoc-client
  labels:
    app: frontend
spec:
  type: ClusterIP
  selector:
    app: kpoc-client
  ports:
    - port: 8081
      targetPort: 8081
status:
  loadBalancer: {}
---
# Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kpoc-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kpoc-client
            port:
              number: 8081
  - host: api.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kpoc-server
            port:
              number: 8080
